# DeepEdge

./: README.md
assignment/: CMakeLists.txt  main.cpp
